[tool.poetry]
name = "a-scalable-financial-fraud-detection-system"
version = "0.1.0"
description = ""
authors = ["Ahmed Shaef <shaef@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
