[tool.poetry]
name = "a-scalable-financial-fraud-detection-system"
version = "0.1.0"
description = ""
authors = ["Ahmed Shaef <shaef@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
dvc = "^3.59.2"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.3"
scikit-learn = "^1.6.1"
streamlit = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
